--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,25 @@
 .wordle-square {
   border: 1px solid black;
   width: 50px;
-  height: 50px
+  height: 50px;
+  margin: 5px;
+  
+}
+
+.wordle-square > span {
+  font-family: sans-serif;
+  font-size: 20px;
+  font-weight: 600;
+  position: relative;
+  left: 35%;
+  top: 30%;
+}
+
+.wordle-row {
+  display: grid;
+  grid-template-columns: 1fr repeat(5, 60px) 1fr;
+  grid-template-rows: 1fr;
+  grid-gap: 5px;
+  margin-left: auto;
+  margin-right: auto;
 }
