--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 .wordle-square {
   border: 1px solid black;
+  border-radius: 5px;
   width: 50px;
   height: 50px;
   margin: 5px;
@@ -11,8 +12,8 @@
   font-size: 20px;
   font-weight: 600;
   position: relative;
-  left: 35%;
-  top: 30%;
+  top: 28.5%;
+  left: 36.5%;
 }
 
 .wordle-row {
